--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+     <item name="android:textColor">#000000</item>
         <item name="colorPrimaryDark">@color/status_bar_color</item>
+
+          <item name="android:windowLightStatusBar">false</item>
+        <!-- Add the following line to set the default background color for all the app. -->
+        <item name="android:windowBackground">@color/primary_dark</item>
+
     </style>
+      <!-- Adds the splash screen definition -->
      <style name="LaunchTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowBackground">@drawable/background_splash</item>
+        <item name="android:background">@drawable/launch_screen</item>
+         <item name="android:statusBarColor">@color/status_bar_color</item>
     </style>
 </resources>
